# logscrub

./: .gitignore  LICENSE  README.md  pyproject.toml
logscrub/: __init__.py  cli.py  core.py  patterns.py
tests/: test_scrub.py
