[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "logscrub"
version = "0.1.0"
description = "Redact secrets and PII from text before pasting it into an LLM, an issue, or a chat."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tianwater" }]
keywords = ["redact", "secrets", "pii", "logs", "llm", "security", "privacy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/tianwater-QAQ/logscrub"

[project.scripts]
logscrub = "logscrub.cli:main"

[tool.setuptools.packages.find]
include = ["logscrub*"]
